# eleanor

./: .flake8  .gitignore  .nojekyll  CSS0_1.josn  CSS0_1.json  LICENSE  README.md  README.rst  about.html  alembic.ini  campaign_template_info  config.yaml.dist  database.html  docs.html  examples.html  getting-started.html  helmsman.py  index.html  meson.build  navigator.py  pycodestyle.cfg  pyproject.toml  requirements.txt  robots.txt  search.json  setup.py  sitemap.xml  test_data0.py  test_radar.py  test_radar_grid.py  test_radar_xyz.py  test_script.py
.eggs/green-3.4.2-py3.10.egg/EGG-INFO/: PKG-INFO  RECORD  requires.txt
.eggs/lxml-4.9.1-py3.10-macosx-10.15-x86_64.egg/EGG-INFO/: RECORD
.github/workflows/: lint.yml  python.yml  test.yml  test.yml.bk  tests.yml  typecheck.yml
alembic/: env.py
alembic/versions/: 0a5036bfdc84_initial_revision.py  1ba7026c4000_add_exit_code_to_huffer_result.py  406976ddd70b_change_create_date_type_in_variable_.py  406976ddd70b_change_create_date_type_in_variable_space.py  4b0c583db36a_remove_suppression_id_from_primary_key.py  4cc564b04784_add_start_and_complete_dates_to_.py  4cc564b04784_add_start_and_complete_dates_to_variable_space.py  616378e69387_combine_kernel_with_core_project.py  6f78dead1916_add_start_and_complete_dates_to_.py  6f78dead1916_add_start_and_complete_dates_to_equilibrium_space.py  781126d47cbe_autoincrement_suppression_exception_ids.py  9415b31c7919_add_timeout_to_kernel_configuration.py  e35ff1ed51d6_rename_log_titration_rate_to_titration_rate.py  e35ff1ed51d6_replace_log_titration_rate_with_.py
campaign/: TEOS_All.py  TEOS_Cal.py
demo/: 01-h2-generation.yaml  02-suppressions.yaml  03-titration-paths.yaml  04-sampled-titration-rates.yaml  CSS0.json
docs/: Makefile  _quarto.yml  about.qmd  conf.py  database.qmd  docs.qmd  examples.qmd  getting-started.qmd  index.qmd  index.rst  make.bat
docs/source/: api.rst  conf.py  index.rst  intro.rst  meta-docs.rst
docs/source/api/: campaign.rst  hanger.rst  (+2 more)
eleanor/: CSS0_1.json  __init__.py  campaign.py  cli.py  cli_helmsman.py  cli_navigator.py  command_line.py  config.py  constraints.py  eleanor.py  equilibrium_space.py  exceptions.py  helmsman.py  models.py  navigator.py  order.py  parameters.py  problem.py  radar.py  radar_grid.py  radar_xyz.py  reactants.py  sailor.py  simple_radar.py  tde_lim.csv  test_worm_data.csv  typing.py  util.py  variable_space.py  yeoman.py  yeoman_actor.py
eleanor/campaign/: TEOS_All.py
eleanor/cli/: __init__.py  __main__.py  fetch.py  huffer.py  run.py  schema.py  scratch.py  util.py
eleanor/config/: __init__.py  config.py  constraints.py  parameter.py  reactant.py  suppression.py
eleanor/data/: CSS0_1.json
eleanor/db/: data0.00a  data1.00a  data1.00b  data1.0a2  data1.0a3  data1.0a5  data1.0a6  data1.0af  data1.0ag  data1.0aj  data1.0ak  data1.0am  data1.0an  data1.0ao  data1.0at  data1.0av  data1.0aw  data1.0ax
eleanor/hanger/: 0_notes  constants.py  data0_tools.py  data0_tools_old.py  db_comms.py  eq36.py  radar_tools.py  radar_tools_old.py  tool_room.py
eleanor/kernel/: config.py  discover.py  exceptions.py  interface.py
hanger/db_comms/: setup.py
hanger/information_tools/: setup.py
paper/: paper.bib  paper.md
site_libs/bootstrap/: bootstrap-a87421c7237e12a84c189c841236b972.min.css  bootstrap-dark-55b0649f7f942c71a7fe2c1872309cd7.min.css
test/: common.py  test_campaign.py  test_helmsman.py  test_integration.py  test_navigator.py  test_util.py
test/hanger/: test_data0_tools.py  test_db_comms.py  test_eq36.py  test_radar_tools.py  test_tool_room.py
(+155 files in other folders)
