[project]
name = "eleanor"
authors = [
  {name = "39 Alpha Research, Team 0", email = "39alpha@39alpharesearch.org"},
]
description = "Large-scale, aqueous geochemical modeling"
readme = "README.rst"
license = {file = "LICENSE"}
dependencies = [
  'SQLAlchemy==2.0.34',
  'numpy==2.1.0',
  'pyyaml',
  'ray[default]==2.35.0',
]
requires-python = ">= 3.12"
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/39alpha/eleanor.git"
Issues = "https://github.com/39alpha/eleanor/issues"
Changelog = "https://github.com/39alpha/eleanor/blob/master/CHANGELOG.md"

[project.scripts]
eleanor = "eleanor.cli.run:main"
eleanor-run = "eleanor.cli.run:main"
eleanor-fetch = "eleanor.cli.fetch:main"
eleanor-huffer = "eleanor.cli.huffer:main"
eleanor-scratch = "eleanor.cli.scratch:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "eleanor/version.py"

[tool.yapf]
column_limit = 120

[tool.isort]
line_length = 120

[tool.mypy]
check_untyped_defs = true
exclude = "(docs/source/conf\\.py)"
