[project]
name = "eleanor"
authors = [
  {name = "39 Alpha Research, Team 0", email = "39alpha@39alpharesearch.org"},
]
description = "Large-scale, aqueous geochemical modeling"
readme = "README.rst"
license = {file = "LICENSE"}
dependencies = [
  'sqlalchemy==2.0.35',
  'numpy',
  'pyyaml',
  'tqdm',
  'psycopg[binary]',
]
requires-python = ">= 3.11"
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/39alpha/eleanor.git"
Issues = "https://github.com/39alpha/eleanor/issues"
Changelog = "https://github.com/39alpha/eleanor/blob/master/CHANGELOG.md"

[project.scripts]
eleanor = "eleanor.cli.run:main"
eleanor-run = "eleanor.cli.run:main"
eleanor-fetch = "eleanor.cli.fetch:main"
eleanor-huffer = "eleanor.cli.huffer:main"
eleanor-scratch = "eleanor.cli.scratch:main"

[build-system]
requires = ["hatchling", "hatch-vcs", "hatch-build-scripts"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "eleanor/version.py"

[tool.yapf]
column_limit = 120

[tool.isort]
line_length = 120

[tool.mypy]
check_untyped_defs = true
exclude = "(docs/source/conf\\.py)"

[[tool.hatch.build.targets.wheel.hooks.build-scripts.scripts]]
commands = [
  'meson setup --wipe build',
]
artifacts = []

[[tool.hatch.build.targets.wheel.hooks.build-scripts.scripts]]
out_dir = "eleanor/kernel/eq36/lib"
work_dir = "build"
commands = [
  'meson compile',
]
artifacts = ["*.so", "*.dylib"]
